--- a/client/index.html
+++ b/client/index.html
@@ -25,8 +25,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto">
           <button type="submit" id="new-contact"class="btn btn-light" height="48px">CREATE NEW CONTACT</button>
+          
         </ul>
         <!--TODO: INSTALL BUTTON -->
+        <button type="submit" id="installBtn" class="btn btn-light" height="48px">INSTALL</button>
       </div>
   </nav>
   
